# 2023-autumn-ab-python-hw-13-d0ggzi

./: .envexample  config.py  db.py  docker-compose.yml  initdb.sql  pyproject.toml
.github/workflows/: ci.yml
src/templates/: login.html  main.html  signup.html
src/web/: app.py  auth.py  parser.py  tasks.py  types.py
tests/: test_auth.py
